--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body{
     display: flex;
     flex-direction: column;
-    font-family: roboto;
+    font-family: 'Roboto', sans-serif;
 }
 
 .header{
@@ -25,4 +25,25 @@ body{
     justify-content: center;
     align-items: center;
     padding: 20px;
+}
+
+.logo{
+    font-size: 24px;
+    color: #F9FAF8;
+}
+
+.main-text{
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
+}
+
+a{
+    font-size: 18px;
+    color: #E5E7EB;
+    text-decoration: none;
+}
+
+li{
+    list-style: none;
 }
