add secondary text

--- a/styles.css
+++ b/styles.css
@@ -38,9 +38,13 @@ body{
     color: #F9FAF8;
 }
 
-a{
+.secondary-text,a{
     font-size: 18px;
     color: #E5E7EB;
+    
+}
+
+a{
     text-decoration: none;
 }
 
