--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,15 @@
+html,body{
+    padding: 0;
+    margin: 0;
+    border: 0;
+}
+
+
 body{
     display: flex;
-    flex-direction: column;
+    flex-flow: column wrap;
     font-family: 'Roboto', sans-serif;
-    padding: 0px;
-    margin: 0px;
-    border: 0px;
+    width: 100%;
 }
 
 .header{
@@ -14,6 +19,7 @@ body{
     flex-direction: column;
     padding: 10px 250px 150px 250px;
     gap: 40px;
+    flex: 0 auto;
 }
 
 .top-header, .bottom-header, .header-links{
