add title and boxes of info-container

--- a/styles.css
+++ b/styles.css
@@ -97,3 +97,32 @@ li{
     border-radius: 8px;
     align-self: center;
 }
+
+/*INFO CONTAINER*/
+.info-container{
+    display:flex;
+    flex-flow: column wrap;
+    gap: 30px;
+    padding: 50px;
+}
+.info-text{
+    display: flex;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+    justify-content: center;
+}
+
+.box-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+}
+
+.info-box{
+    width: 150px;
+    height: 150px;
+    border: 3px solid #3882F6;
+    border-radius: 8px;
+}
