add text and background color to quote container

--- a/styles.css
+++ b/styles.css
@@ -149,3 +149,9 @@ li{
     flex-flow: column wrap;
     gap: 10px;
 }
+
+/*QUOTE*/
+.quote-container{
+    display: flex;
+    background-color: #E5E7EB;
+}
