--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 html,body{
+    width: 100%;
+    height: 100%;
     padding: 0;
     margin: 0;
-    border: 0;
 }
 
 
@@ -9,7 +10,9 @@ body{
     display: flex;
     flex-direction: column;
     font-family: 'Roboto', sans-serif;
-    width: 100%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box
 }
 
 /*HEADER*/
@@ -154,29 +157,66 @@ li{
 /*QUOTE*/
 .quote-container{
     display: flex;
-    background-color: #E5E7EB;
-    align-items: center;
-    justify-content: flex-end;
-    padding: 150px;
-}
-
-.quote{
-    display: flex;
     flex-direction: column;
+    background-color: #E5E7EB;
+    margin: 0;
+    padding: 150px;
+    flex: 1 0 auto;
 }
-
 
 .quote-text{
-    text-align: justify;
-    font-size: 30px;
+    font-size: 36px;
     font-style: italic;
     color: #1F2937;
 }
 
 .quote-reference{
-    text-align: end;
+    font-weight: bold;
     font-size: 24px;
+    text-align: right;
+}
+
+@media (max-width: 500px) {
+    .quote-container{
+        width: fit-content;
+    }
+}
+
+/* Sign up */
+
+.sign-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    padding: 150px;
+}
+
+.card{
+    display: flex;
+    justify-content: space-between;
+    background-color:#3882F6;
+    padding: 30px 200px;
+    border-radius: 5px;
+}
+
+.card-text{
+    font-size: 24px;
+    color: white;
     font-weight: bold;
 }
 
+.card-subtext{
+    font-size: 16px;
+    color: white;
+}
 
+.signup-btn{
+    background-color: #3882F6;
+    border:1px solid #F9FAF8;
+    color: #E5E7EB;
+    font-weight: bold;
+    padding: 10px 30px 10px 30px;
+    border-radius: 8px;
+    align-self: center;
+}
