--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,4 @@
 html,body{
-    width: 100%;
-    height: 100%;
     padding: 0;
     margin: 0;
 }
@@ -12,7 +10,6 @@ body{
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box
 }
 
 /*HEADER*/
@@ -113,6 +110,8 @@ li{
 .info-container{
     display:flex;
     flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
     gap: 30px;
     padding: 50px 150px 150px 150px;
 }
@@ -186,18 +185,18 @@ li{
 
 .sign-container{
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     background-color: white;
     padding: 150px;
 }
 
 .card{
     display: flex;
-    justify-content: space-between;
     background-color:#3882F6;
-    padding: 30px 200px;
+    padding: 30px 100px;
     border-radius: 5px;
+    gap: 50px;
 }
 
 .card-text{
